# alemedeiros-code-jam

./: LICENSE  README.md  alemedeiros-code-jam.cabal
src/: CodeJamLib.hs
src-benchmark/: Main.hs
src-exe/: CountingSheep.hs  Fractiles.hs  LastWord.hs  RevengeOfThePancakes.hs
src-test/: Main.hs
