name:                alemedeiros-code-jam
version:             0.1.0.0
synopsis:            My personal solutions do past Google Code Jam Problems
description:         Please see README.md

license:             ISC
license-file:        LICENSE
author:              Alexandre Medeiros
maintainer:          alexandre.n.medeiros@gmail.com
copyright:           © 2016 Alexandre Medeiros
homepage:            https://github.com/alemedeiros/alemedeiros-code-jam
bug-reports:         https://github.com/alemedeiros/alemedeiros-code-jam/issues

category:            Code Competitions
build-type:          Simple
stability:           alpha (experimental)
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/alemedeiros/alemedeiros-code-jam

library
  default-language:  Haskell2010
  ghc-options:       -Wall -O2
  hs-source-dirs:    src
  exposed-modules:   CodeJamLib
  build-depends:     base >= 4.8 && < 5

executable 2016QR-A
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-exe
  main-is:           CountingSheep.hs
  build-depends:     base >= 4.8 && < 5
                   , alemedeiros-code-jam

executable 2016QR-B
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-exe
  main-is:           RevengeOfThePancakes.hs
  build-depends:     base >= 4.8 && < 5
                   , alemedeiros-code-jam

executable 2016QR-D
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-exe
  main-is:           Fractiles.hs
  build-depends:     base >= 4.8 && < 5
                   , alemedeiros-code-jam

test-suite alemedeiros-code-jam-test
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-test
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , tasty >= 0.11
                   , tasty-hunit >= 0.9
                   , tasty-smallcheck >= 0.8
                   , alemedeiros-code-jam

benchmark alemedeiros-code-jam-benchmark
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-benchmark
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , criterion >= 1.1
                   , alemedeiros-code-jam
